--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
 					<h2>ABOUT ME</h2>
-					<p>My name is Harsh Sharma.I'm an Btech student at Shree Vaishnav Vidyapeeth Vishwavidyalaya Computer Science Department.I was born and raised in Indore.</p>
+					<p>My name is Harsh Sharma.I'm a Btech student at Shree Vaishnav Vidyapeeth Vishwavidyalaya Computer Science Department.I was born and raised in Indore.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-6 info">
