--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#top" class="smoothScroll">HOME</a></li>
-					<li><a href="#features" class="smoothScroll">Skills</a></li>
-                    <li><a href="#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+					<li><a href="#top" >HOME</a></li>
+					<li><a href="#features" >Skills</a></li>
+                    <li><a href="#about" >ABOUT</a></li>
+					<li><a href="#contact" >CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
