--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8"><title>Harsh Sharma Web Devlopment</title>
 		<meta http-equiv="refresh" content="600">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="Portfolio,Harsh Sharma Portfolio">
 		<meta name="description" content="Hello myself Harsh Sharma.I'm computer science student passionate about programming.Check my portfolio-(navbar,skills section etc).Harsh Sharma Web Devlopement">
 		<meta name="author" content="Harsh Sharma">
-		<title>Harsh Sharma Web Devlopment</title>
 		<script src="https://kit.fontawesome.com/c2cd2c9b21.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/templatemo_style.css">
