--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="en">
 	<head>
-		<meta charset="utf-8"><title>Harsh Sharma Web Devlopment</title>
-		<meta http-equiv="refresh" content="600">
+		<meta charset="utf-8"/><title>Harsh Sharma Web Devlopment</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="Portfolio,Harsh Sharma Portfolio">
-		<meta name="description" content="Hello myself Harsh Sharma.I'm computer science student passionate about programming.Check my portfolio-(navbar,skills section etc).Harsh Sharma Web Devlopement">
+		<meta name="keywords" content="Portfolio,HarshSharma">
+		<meta name="description" content="Hello my name is Harsh Sharma I'm Btech student at Shree Vaishnav Vidyapeeth Vishwavidyalaya Computer Science Department.I was born and raised in Indore.
+                , I'm passionate about programming tools and technologies in order to learn them">
+		<meta property="title" content="Portfolio, Harsh Sharma">
 		<meta name="author" content="Harsh Sharma">
 		<script src="https://kit.fontawesome.com/c2cd2c9b21.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
