--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="author" content="Harsh Sharma">
 		<script src="https://kit.fontawesome.com/c2cd2c9b21.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo_style.css">
+		<link rel="stylesheet" href="css/HarshCSS_style.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>		
      
