--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-6 info">
-					<h3> A little bit about myself</h3>
+					<h3> A little bit more about myself</h3>
 		
 					<p>I love coding and i am curious about tools and tachnology in order to learn them.</p>
 					<p>Basically, I have experience of backend technolgies.In past, i completed some projects on backend technolgies like electronic store in Java and Grocery Store in PHP.<b>"Software engineering is a never ending puzzle that I am passionately engaged in solving"</b></p>
