--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><i class="fa fa-MYSQl"><img src="images/database.png"></i></a>
-						<h3>MYSQl</h3>
+						<h3>MYSQL</h3>
 						</div>
 			</div>
 		</div>
