--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	        	<img src="images/slider/2.jpg" alt="Slide 2">
 	        	<div class="slider-caption">
 				    <div class="templatemo_homewrapper">
-				      <h1>I am Devleoper</h1>
+				      <h1>I am Developer</h1>
 				      
 					</div>
 			  	</div>
